src/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    CIENTNUM
    COMENTMULT
    COMENTSIMP
    FLOAT
    BINARIO
    TYPE

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> ProgramaDecl
Rule 2     ProgramaDecl -> classDecl ProgramaDecl
Rule 3     ProgramaDecl -> vacio
Rule 4     classDecl -> CLASS ID ExtendsOp LLAVEIZ DeclaracionAtributos LLAVEDER
Rule 5     ExtendsOp -> EXTENDS ID
Rule 6     ExtendsOp -> vacio
Rule 7     DeclaracionAtributos -> fieldmethDecl DeclaracionAtributos
Rule 8     DeclaracionAtributos -> vacio
Rule 9     fieldmethDecl -> Type ID ListComaID PUNTOCOMA
Rule 10    ListComaID -> COMA ID ListComaID
Rule 11    ListComaID -> vacio
Rule 12    fieldmethDecl -> Type ID PARENIZQ formals PARENDER block
Rule 13    fieldmethDecl -> VOID ID PARENIZQ formals PARENDER block
Rule 14    formals -> Type ID ListComaTypeID
Rule 15    formals -> vacio
Rule 16    ListComaTypeID -> COMA Type ID ListComaTypeID
Rule 17    ListComaTypeID -> vacio
Rule 18    Type -> INT
Rule 19    Type -> BOOLEAN
Rule 20    Type -> STRING
Rule 21    Type -> Type CORCHIZ CORCHDER
Rule 22    block -> LLAVEIZ lsVarDecl lstmtDecl LLAVEDER
Rule 23    lsVarDecl -> Declaracion_Variable lsVarDecl
Rule 24    lsVarDecl -> vacio
Rule 25    Declaracion_Variable -> Type ID IgualExp IdAsignExp PUNTOCOMA
Rule 26    IgualExp -> IGUAL Expresion
Rule 27    IgualExp -> vacio
Rule 28    IdAsignExp -> COMA ID IgualExp IdAsignExp
Rule 29    IdAsignExp -> vacio
Rule 30    lstmtDecl -> stmt lstmtDecl
Rule 31    lstmtDecl -> vacio
Rule 32    stmt -> assign PUNTOCOMA
Rule 33    stmt -> call PUNTOCOMA
Rule 34    stmt -> RETURN Expresion PUNTOCOMA
Rule 35    stmt -> RETURN PUNTOCOMA
Rule 36    stmt -> IF PARENIZQ Expresion PARENDER stmt ELSE stmt
Rule 37    stmt -> IF PARENIZQ Expresion PARENDER stmt
Rule 38    stmt -> WHILE PARENIZQ Expresion PARENDER stmt
Rule 39    stmt -> BREAK PUNTOCOMA
Rule 40    stmt -> CONTINUE PUNTOCOMA
Rule 41    stmt -> block
Rule 42    assign -> location IGUAL Expresion
Rule 43    assign -> vacio
Rule 44    location -> ID
Rule 45    location -> Expresion PUNTO ID
Rule 46    location -> Expresion CORCHIZ Expresion CORCHIZ
Rule 47    call -> method PARENIZQ actuals PARENDER
Rule 48    call -> method PARENIZQ PARENDER
Rule 49    method -> ID
Rule 50    method -> Expresion PUNTO ID
Rule 51    actuals -> Expresion LsActualesExp
Rule 52    actuals -> vacio
Rule 53    LsActualesExp -> COMA Expresion LsActualesExp
Rule 54    LsActualesExp -> vacio
Rule 55    Expresion -> location
Rule 56    Expresion -> call
Rule 57    Expresion -> THIS
Rule 58    Expresion -> NEW ID PARENIZQ PARENDER
Rule 59    Expresion -> NEW Type CORCHIZ Expresion CORCHDER
Rule 60    Expresion -> Expresion PUNTO LENGTH
Rule 61    Expresion -> Expresion binary Expresion
Rule 62    Expresion -> Unary Expresion
Rule 63    binary -> MAS
Rule 64    binary -> MENOS
Rule 65    binary -> MULTI
Rule 66    binary -> DIVISION
Rule 67    binary -> MODULO
Rule 68    binary -> AND
Rule 69    binary -> OR
Rule 70    binary -> MENOR
Rule 71    binary -> MENORIG
Rule 72    binary -> MAYOR
Rule 73    binary -> MAYORIG
Rule 74    binary -> COMPARAR
Rule 75    binary -> DIFERCOMP
Rule 76    Unary -> MENOS
Rule 77    Unary -> DIFER
Rule 78    Expresion -> Literal
Rule 79    Literal -> TRUE
Rule 80    Literal -> CADENA
Rule 81    Literal -> FALSE
Rule 82    Literal -> NULL
Rule 83    Literal -> ENTNUM
Rule 84    Expresion -> PARENIZQ Expresion PARENDER
Rule 85    vacio -> <empty>

Terminals, with rules where they appear

AND                  : 68
BINARIO              : 
BOOLEAN              : 19
BREAK                : 39
CADENA               : 80
CIENTNUM             : 
CLASS                : 4
COMA                 : 10 16 28 53
COMENTMULT           : 
COMENTSIMP           : 
COMPARAR             : 74
CONTINUE             : 40
CORCHDER             : 21 59
CORCHIZ              : 21 46 46 59
DIFER                : 77
DIFERCOMP            : 75
DIVISION             : 66
ELSE                 : 36
ENTNUM               : 83
EXTENDS              : 5
FALSE                : 81
FLOAT                : 
ID                   : 4 5 9 10 12 13 14 16 25 28 44 45 49 50 58
IF                   : 36 37
IGUAL                : 26 42
INT                  : 18
LENGTH               : 60
LLAVEDER             : 4 22
LLAVEIZ              : 4 22
MAS                  : 63
MAYOR                : 72
MAYORIG              : 73
MENOR                : 70
MENORIG              : 71
MENOS                : 64 76
MODULO               : 67
MULTI                : 65
NEW                  : 58 59
NULL                 : 82
OR                   : 69
PARENDER             : 12 13 36 37 38 47 48 58 84
PARENIZQ             : 12 13 36 37 38 47 48 58 84
PUNTO                : 45 50 60
PUNTOCOMA            : 9 25 32 33 34 35 39 40
RETURN               : 34 35
STRING               : 20
THIS                 : 57
TRUE                 : 79
TYPE                 : 
VOID                 : 13
WHILE                : 38
error                : 

Nonterminals, with rules where they appear

DeclaracionAtributos : 4 7
Declaracion_Variable : 23
Expresion            : 26 34 36 37 38 42 45 46 46 50 51 53 59 60 61 61 62 84
ExtendsOp            : 4
IdAsignExp           : 25 28
IgualExp             : 25 28
ListComaID           : 9 10
ListComaTypeID       : 14 16
Literal              : 78
LsActualesExp        : 51 53
Programa             : 0
ProgramaDecl         : 1 2
Type                 : 9 12 14 16 21 25 59
Unary                : 62
actuals              : 47
assign               : 32
binary               : 61
block                : 12 13 41
call                 : 33 56
classDecl            : 2
fieldmethDecl        : 7
formals              : 12 13
location             : 42 55
lsVarDecl            : 22 23
lstmtDecl            : 22 30
method               : 47 48
stmt                 : 30 36 36 37 38
vacio                : 3 6 8 11 15 17 24 27 29 31 43 52 54

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . ProgramaDecl
    (2) ProgramaDecl -> . classDecl ProgramaDecl
    (3) ProgramaDecl -> . vacio
    (4) classDecl -> . CLASS ID ExtendsOp LLAVEIZ DeclaracionAtributos LLAVEDER
    (85) vacio -> .

    CLASS           shift and go to state 4
    $end            reduce using rule 85 (vacio -> .)

    classDecl                      shift and go to state 1
    vacio                          shift and go to state 3
    Programa                       shift and go to state 2
    ProgramaDecl                   shift and go to state 5

state 1

    (2) ProgramaDecl -> classDecl . ProgramaDecl
    (2) ProgramaDecl -> . classDecl ProgramaDecl
    (3) ProgramaDecl -> . vacio
    (4) classDecl -> . CLASS ID ExtendsOp LLAVEIZ DeclaracionAtributos LLAVEDER
    (85) vacio -> .

    CLASS           shift and go to state 4
    $end            reduce using rule 85 (vacio -> .)

    vacio                          shift and go to state 3
    classDecl                      shift and go to state 1
    ProgramaDecl                   shift and go to state 6

state 2

    (0) S' -> Programa .



state 3

    (3) ProgramaDecl -> vacio .

    $end            reduce using rule 3 (ProgramaDecl -> vacio .)


state 4

    (4) classDecl -> CLASS . ID ExtendsOp LLAVEIZ DeclaracionAtributos LLAVEDER

    ID              shift and go to state 7


state 5

    (1) Programa -> ProgramaDecl .

    $end            reduce using rule 1 (Programa -> ProgramaDecl .)


state 6

    (2) ProgramaDecl -> classDecl ProgramaDecl .

    $end            reduce using rule 2 (ProgramaDecl -> classDecl ProgramaDecl .)


state 7

    (4) classDecl -> CLASS ID . ExtendsOp LLAVEIZ DeclaracionAtributos LLAVEDER
    (5) ExtendsOp -> . EXTENDS ID
    (6) ExtendsOp -> . vacio
    (85) vacio -> .

    EXTENDS         shift and go to state 8
    LLAVEIZ         reduce using rule 85 (vacio -> .)

    ExtendsOp                      shift and go to state 9
    vacio                          shift and go to state 10

state 8

    (5) ExtendsOp -> EXTENDS . ID

    ID              shift and go to state 11


state 9

    (4) classDecl -> CLASS ID ExtendsOp . LLAVEIZ DeclaracionAtributos LLAVEDER

    LLAVEIZ         shift and go to state 12


state 10

    (6) ExtendsOp -> vacio .

    LLAVEIZ         reduce using rule 6 (ExtendsOp -> vacio .)


state 11

    (5) ExtendsOp -> EXTENDS ID .

    LLAVEIZ         reduce using rule 5 (ExtendsOp -> EXTENDS ID .)


state 12

    (4) classDecl -> CLASS ID ExtendsOp LLAVEIZ . DeclaracionAtributos LLAVEDER
    (7) DeclaracionAtributos -> . fieldmethDecl DeclaracionAtributos
    (8) DeclaracionAtributos -> . vacio
    (9) fieldmethDecl -> . Type ID ListComaID PUNTOCOMA
    (12) fieldmethDecl -> . Type ID PARENIZQ formals PARENDER block
    (13) fieldmethDecl -> . VOID ID PARENIZQ formals PARENDER block
    (85) vacio -> .
    (18) Type -> . INT
    (19) Type -> . BOOLEAN
    (20) Type -> . STRING
    (21) Type -> . Type CORCHIZ CORCHDER

    VOID            shift and go to state 16
    LLAVEDER        reduce using rule 85 (vacio -> .)
    INT             shift and go to state 15
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18

    DeclaracionAtributos           shift and go to state 13
    fieldmethDecl                  shift and go to state 14
    vacio                          shift and go to state 20
    Type                           shift and go to state 19

state 13

    (4) classDecl -> CLASS ID ExtendsOp LLAVEIZ DeclaracionAtributos . LLAVEDER

    LLAVEDER        shift and go to state 21


state 14

    (7) DeclaracionAtributos -> fieldmethDecl . DeclaracionAtributos
    (7) DeclaracionAtributos -> . fieldmethDecl DeclaracionAtributos
    (8) DeclaracionAtributos -> . vacio
    (9) fieldmethDecl -> . Type ID ListComaID PUNTOCOMA
    (12) fieldmethDecl -> . Type ID PARENIZQ formals PARENDER block
    (13) fieldmethDecl -> . VOID ID PARENIZQ formals PARENDER block
    (85) vacio -> .
    (18) Type -> . INT
    (19) Type -> . BOOLEAN
    (20) Type -> . STRING
    (21) Type -> . Type CORCHIZ CORCHDER

    VOID            shift and go to state 16
    LLAVEDER        reduce using rule 85 (vacio -> .)
    INT             shift and go to state 15
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18

    DeclaracionAtributos           shift and go to state 22
    fieldmethDecl                  shift and go to state 14
    vacio                          shift and go to state 20
    Type                           shift and go to state 19

state 15

    (18) Type -> INT .

    ID              reduce using rule 18 (Type -> INT .)
    CORCHIZ         reduce using rule 18 (Type -> INT .)


state 16

    (13) fieldmethDecl -> VOID . ID PARENIZQ formals PARENDER block

    ID              shift and go to state 23


state 17

    (19) Type -> BOOLEAN .

    ID              reduce using rule 19 (Type -> BOOLEAN .)
    CORCHIZ         reduce using rule 19 (Type -> BOOLEAN .)


state 18

    (20) Type -> STRING .

    ID              reduce using rule 20 (Type -> STRING .)
    CORCHIZ         reduce using rule 20 (Type -> STRING .)


state 19

    (9) fieldmethDecl -> Type . ID ListComaID PUNTOCOMA
    (12) fieldmethDecl -> Type . ID PARENIZQ formals PARENDER block
    (21) Type -> Type . CORCHIZ CORCHDER

    ID              shift and go to state 25
    CORCHIZ         shift and go to state 24


state 20

    (8) DeclaracionAtributos -> vacio .

    LLAVEDER        reduce using rule 8 (DeclaracionAtributos -> vacio .)


state 21

    (4) classDecl -> CLASS ID ExtendsOp LLAVEIZ DeclaracionAtributos LLAVEDER .

    CLASS           reduce using rule 4 (classDecl -> CLASS ID ExtendsOp LLAVEIZ DeclaracionAtributos LLAVEDER .)
    $end            reduce using rule 4 (classDecl -> CLASS ID ExtendsOp LLAVEIZ DeclaracionAtributos LLAVEDER .)


state 22

    (7) DeclaracionAtributos -> fieldmethDecl DeclaracionAtributos .

    LLAVEDER        reduce using rule 7 (DeclaracionAtributos -> fieldmethDecl DeclaracionAtributos .)


state 23

    (13) fieldmethDecl -> VOID ID . PARENIZQ formals PARENDER block

    PARENIZQ        shift and go to state 26


state 24

    (21) Type -> Type CORCHIZ . CORCHDER

    CORCHDER        shift and go to state 27


state 25

    (9) fieldmethDecl -> Type ID . ListComaID PUNTOCOMA
    (12) fieldmethDecl -> Type ID . PARENIZQ formals PARENDER block
    (10) ListComaID -> . COMA ID ListComaID
    (11) ListComaID -> . vacio
    (85) vacio -> .

    PARENIZQ        shift and go to state 31
    COMA            shift and go to state 30
    PUNTOCOMA       reduce using rule 85 (vacio -> .)

    ListComaID                     shift and go to state 28
    vacio                          shift and go to state 29

state 26

    (13) fieldmethDecl -> VOID ID PARENIZQ . formals PARENDER block
    (14) formals -> . Type ID ListComaTypeID
    (15) formals -> . vacio
    (18) Type -> . INT
    (19) Type -> . BOOLEAN
    (20) Type -> . STRING
    (21) Type -> . Type CORCHIZ CORCHDER
    (85) vacio -> .

    INT             shift and go to state 15
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    PARENDER        reduce using rule 85 (vacio -> .)

    vacio                          shift and go to state 32
    Type                           shift and go to state 33
    formals                        shift and go to state 34

state 27

    (21) Type -> Type CORCHIZ CORCHDER .

    ID              reduce using rule 21 (Type -> Type CORCHIZ CORCHDER .)
    CORCHIZ         reduce using rule 21 (Type -> Type CORCHIZ CORCHDER .)


state 28

    (9) fieldmethDecl -> Type ID ListComaID . PUNTOCOMA

    PUNTOCOMA       shift and go to state 35


state 29

    (11) ListComaID -> vacio .

    PUNTOCOMA       reduce using rule 11 (ListComaID -> vacio .)


state 30

    (10) ListComaID -> COMA . ID ListComaID

    ID              shift and go to state 36


state 31

    (12) fieldmethDecl -> Type ID PARENIZQ . formals PARENDER block
    (14) formals -> . Type ID ListComaTypeID
    (15) formals -> . vacio
    (18) Type -> . INT
    (19) Type -> . BOOLEAN
    (20) Type -> . STRING
    (21) Type -> . Type CORCHIZ CORCHDER
    (85) vacio -> .

    INT             shift and go to state 15
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18
    PARENDER        reduce using rule 85 (vacio -> .)

    vacio                          shift and go to state 32
    Type                           shift and go to state 33
    formals                        shift and go to state 37

state 32

    (15) formals -> vacio .

    PARENDER        reduce using rule 15 (formals -> vacio .)


state 33

    (14) formals -> Type . ID ListComaTypeID
    (21) Type -> Type . CORCHIZ CORCHDER

    ID              shift and go to state 38
    CORCHIZ         shift and go to state 24


state 34

    (13) fieldmethDecl -> VOID ID PARENIZQ formals . PARENDER block

    PARENDER        shift and go to state 39


state 35

    (9) fieldmethDecl -> Type ID ListComaID PUNTOCOMA .

    VOID            reduce using rule 9 (fieldmethDecl -> Type ID ListComaID PUNTOCOMA .)
    INT             reduce using rule 9 (fieldmethDecl -> Type ID ListComaID PUNTOCOMA .)
    BOOLEAN         reduce using rule 9 (fieldmethDecl -> Type ID ListComaID PUNTOCOMA .)
    STRING          reduce using rule 9 (fieldmethDecl -> Type ID ListComaID PUNTOCOMA .)
    LLAVEDER        reduce using rule 9 (fieldmethDecl -> Type ID ListComaID PUNTOCOMA .)


state 36

    (10) ListComaID -> COMA ID . ListComaID
    (10) ListComaID -> . COMA ID ListComaID
    (11) ListComaID -> . vacio
    (85) vacio -> .

    COMA            shift and go to state 30
    PUNTOCOMA       reduce using rule 85 (vacio -> .)

    ListComaID                     shift and go to state 40
    vacio                          shift and go to state 29

state 37

    (12) fieldmethDecl -> Type ID PARENIZQ formals . PARENDER block

    PARENDER        shift and go to state 41


state 38

    (14) formals -> Type ID . ListComaTypeID
    (16) ListComaTypeID -> . COMA Type ID ListComaTypeID
    (17) ListComaTypeID -> . vacio
    (85) vacio -> .

    COMA            shift and go to state 42
    PARENDER        reduce using rule 85 (vacio -> .)

    ListComaTypeID                 shift and go to state 44
    vacio                          shift and go to state 43

state 39

    (13) fieldmethDecl -> VOID ID PARENIZQ formals PARENDER . block
    (22) block -> . LLAVEIZ lsVarDecl lstmtDecl LLAVEDER

    LLAVEIZ         shift and go to state 45

    block                          shift and go to state 46

state 40

    (10) ListComaID -> COMA ID ListComaID .

    PUNTOCOMA       reduce using rule 10 (ListComaID -> COMA ID ListComaID .)


state 41

    (12) fieldmethDecl -> Type ID PARENIZQ formals PARENDER . block
    (22) block -> . LLAVEIZ lsVarDecl lstmtDecl LLAVEDER

    LLAVEIZ         shift and go to state 45

    block                          shift and go to state 47

state 42

    (16) ListComaTypeID -> COMA . Type ID ListComaTypeID
    (18) Type -> . INT
    (19) Type -> . BOOLEAN
    (20) Type -> . STRING
    (21) Type -> . Type CORCHIZ CORCHDER

    INT             shift and go to state 15
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18

    Type                           shift and go to state 48

state 43

    (17) ListComaTypeID -> vacio .

    PARENDER        reduce using rule 17 (ListComaTypeID -> vacio .)


state 44

    (14) formals -> Type ID ListComaTypeID .

    PARENDER        reduce using rule 14 (formals -> Type ID ListComaTypeID .)


state 45

    (22) block -> LLAVEIZ . lsVarDecl lstmtDecl LLAVEDER
    (23) lsVarDecl -> . Declaracion_Variable lsVarDecl
    (24) lsVarDecl -> . vacio
    (25) Declaracion_Variable -> . Type ID IgualExp IdAsignExp PUNTOCOMA
    (85) vacio -> .
    (18) Type -> . INT
    (19) Type -> . BOOLEAN
    (20) Type -> . STRING
    (21) Type -> . Type CORCHIZ CORCHDER

    RETURN          reduce using rule 85 (vacio -> .)
    IF              reduce using rule 85 (vacio -> .)
    WHILE           reduce using rule 85 (vacio -> .)
    BREAK           reduce using rule 85 (vacio -> .)
    CONTINUE        reduce using rule 85 (vacio -> .)
    LLAVEIZ         reduce using rule 85 (vacio -> .)
    ID              reduce using rule 85 (vacio -> .)
    THIS            reduce using rule 85 (vacio -> .)
    NEW             reduce using rule 85 (vacio -> .)
    PARENIZQ        reduce using rule 85 (vacio -> .)
    MENOS           reduce using rule 85 (vacio -> .)
    DIFER           reduce using rule 85 (vacio -> .)
    TRUE            reduce using rule 85 (vacio -> .)
    CADENA          reduce using rule 85 (vacio -> .)
    FALSE           reduce using rule 85 (vacio -> .)
    NULL            reduce using rule 85 (vacio -> .)
    ENTNUM          reduce using rule 85 (vacio -> .)
    LLAVEDER        reduce using rule 85 (vacio -> .)
    PUNTOCOMA       reduce using rule 85 (vacio -> .)
    INT             shift and go to state 15
    BOOLEAN         shift and go to state 17
    STRING          shift and go to state 18

    Declaracion_Variable           shift and go to state 49
    vacio                          shift and go to state 50
    lsVarDecl                      shift and go to state 51
    Type                           shift and go to state 52

state 46

    (13) fieldmethDecl -> VOID ID PARENIZQ formals PARENDER block .

    VOID            reduce using rule 13 (fieldmethDecl -> VOID ID PARENIZQ formals PARENDER block .)
    INT             reduce using rule 13 (fieldmethDecl -> VOID ID PARENIZQ formals PARENDER block .)
    BOOLEAN         reduce using rule 13 (fieldmethDecl -> VOID ID PARENIZQ formals PARENDER block .)
    STRING          reduce using rule 13 (fieldmethDecl -> VOID ID PARENIZQ formals PARENDER block .)
    LLAVEDER        reduce using rule 13 (fieldmethDecl -> VOID ID PARENIZQ formals PARENDER block .)


state 47

    (12) fieldmethDecl -> Type ID PARENIZQ formals PARENDER block .

    VOID            reduce using rule 12 (fieldmethDecl -> Type ID PARENIZQ formals PARENDER block .)
    INT             reduce using rule 12 (fieldmethDecl -> Type ID PARENIZQ formals PARENDER block .)
    BOOLEAN         reduce using rule 12 (fieldmethDecl -> Type ID PARENIZQ formals PARENDER block .)
    STRING          reduce using rule 12 (fieldmethDecl -> Type ID PARENIZQ formals PARENDER block .)
    LLAVEDER        reduce using rule 12 (fieldmethDecl -> Type ID PARENIZQ formals PARENDER block .)


state 48

    (16) ListComaTypeID -> COMA Type . ID ListComaTypeID
    (21) Type -> Type . CORCHIZ CORCHDER

    ID              shift and go to state 53
    CORCHIZ         shift and go to state 24


state 49

    (23) lsVarDecl -> Declaracion_Variable . lsVarDecl
    (23) lsVarDecl -> . Declaracion_Variable lsVarDecl
    (24) lsVarDecl -> . vacio
    (25) Declaracion_Variable -> . Type ID IgualExp IdAsignExp PUNTOCOMA
    (85) vacio -> .
    (18) Type -> . INT
    (19) Type -> . BOOLEAN
    (20) Type -> . STRING
    (21) Type -> . Type CORCHIZ CORCHDER
